--- a/Redaction/Beamer/TweetEmbedding_slides.Rmd
+++ b/Redaction/Beamer/TweetEmbedding_slides.Rmd
@@ -2,8 +2,10 @@
 title: "*Word-Embedding* et sentiments des ménages avec Twitter"
 subtitle: "Projet de statistique appliquée, Ensae"
 author: "Kim Antunez, Romain Lesauvage et Alain Quartier-la-Tente"
-division: "11/06/2020 "
-departement: "Ensae --- 2019-2020"
+departement: "Ensae --- 2019-2020 "
+division: |
+    | encadrement : \textsc{Benjamin Muller} (Inria)
+    | 11/06/2020
 logo: "img/LOGO-ENSAE.png"
 automaticcontents: false
 output:
@@ -140,6 +142,8 @@ Pour chaque phrase on :
 
 - supprime la ponctuation, met tout en minuscule
 
+- affecte la valeur « lowfrequency »  aux mots rares.
+
 - effectue un sous-échantillonnage des mots (\highlight{subsampling})
 
 - tire au hasard un mot *focus* et un mot *contexte* associé
@@ -227,9 +231,9 @@ $$
 
 Les vecteurs-mots sont de grande dimension : comment juger de leur qualité et de leurs proximités ?
 
-- \textbf{Similarité cosinus} : distance entre vecteurs-mots.
-
 - \textbf{ACP et t-SNE} :  réduire la dimension et analyser les proximités.
+
+- \textbf{Similarité cosinus} : distance entre vecteurs-mots.
 
 - \textbf{Jugement humain} : corrélations entre les proximités de nos vecteurs-mots et une base de proximités de mots construites par le jugement d'individus.
 
@@ -382,30 +386,26 @@ Les vecteurs-mots sont de grande dimension : comment juger de leur qualité et d
 
 \end{minipage}%
 \begin{minipage}{.6\textwidth}
-\tiny
+\footnotesize
 
 \begin{table}[!h]
 \begin{center}
 \begin{tabular}{|c|c|c|c|}
     \hline
-\textbf{bonjour} & \textbf{femme} & \textbf{1} & \textbf{samedi} \tabularnewline
-\emph{(669)} & \emph{(264)} & \emph{(765)} & \emph{(203)} \tabularnewline
+\textbf{bonjour} & \textbf{femme} & \textbf{1} \tabularnewline
+\emph{(669)} & \emph{(264)} & \emph{(765)} \tabularnewline
        \hline
-\includegraphics[height=2mm]{img/emojis/1.png} (0,59) & quelle (0,49) & 5 (0,55) & soir (0,57) \tabularnewline
-\includegraphics[height=2mm]{img/emojis/2.png} (0,59) & cette (0,46) & mois (0,51) & vivement (0,51) \tabularnewline
-merci (0,54) & une (0,44) & 10 (0,49) & demain (0,50) \tabularnewline
-nuit (0,48) & vie (0,44) & 2 (0,48) & end (0,48) \tabularnewline
-bisous (0,47) & grippe (0,44) & top (0,48) & weekend (0,47) \tabularnewline
-bonne (0,47) & belle (0,43) & depuis (0,47) & matin (0,45) \tabularnewline
-\includegraphics[height=2mm]{img/emojis/3.png} (0,46) & ma (0,43) & saison (0,46) & jeudi (0,45) \tabularnewline
-vous (0,46) & magnifique (0,43) & ans (0,44) & prochain (0,43) \tabularnewline
-plaisir (0,44) & nouvelle (0,43) & jours (0,43) & week (0,43) \tabularnewline
-allez (0,43) & vidéo (0,39) & 3 (0,43) & \includegraphics[height=2mm]{img/emojis/4.png} (0,42) \tabularnewline
+\includegraphics[height=2mm]{img/emojis/1.png} (0,59) & quelle (0,49) & 5 (0,55) \tabularnewline
+\includegraphics[height=2mm]{img/emojis/2.png} (0,59) & cette (0,46) & mois (0,51) \tabularnewline
+merci (0,54) & une (0,44) & 10 (0,49) \tabularnewline
+nuit (0,48) & vie (0,44) & 2 (0,48) \tabularnewline
+bisous (0,47) & grippe (0,44) & top (0,48) \tabularnewline
     \hline
  \end{tabular}
 \captionsetup{margin=0cm,format=hang,justification=justified}
 
 \end{center}
+\tiny
 \emph{ep = 80 / w = 4 / lr = 0,02 / dim = 100 / base : 100 000 tweets}
 
 \end{table}
@@ -417,6 +417,7 @@ allez (0,43) & vidéo (0,39) & 3 (0,43) & \includegraphics[height=2mm]{img/emoji
 
 \pause 
 
+\bigskip
 
 \begin{figure}
 \begin{minipage}{.4\textwidth}
@@ -435,34 +436,30 @@ Modèle \texttt{Gensim}
 
 \end{minipage}%
 \begin{minipage}{.6\textwidth}
-\tiny
+\footnotesize
 
 \begin{table}[h]
 \begin{center}
 \begin{tabular}{|c|c|c|c|}
     \hline
-\textbf{bonjour} & \textbf{femme} & \textbf{1} & \textbf{samedi} \tabularnewline
-\emph{(17 043)} & \emph{(6 177)} & \emph{(21 055)} & \emph{(4 917)} \tabularnewline
+\textbf{bonjour} & \textbf{femme} & \textbf{1} \tabularnewline
+\emph{(17 043)} & \emph{(6 177)} & \emph{(21 055)} \tabularnewline
        \hline
-bonsoir (0,85) & fille (0,86) & 2 (0,65) & vendredi (0,88) \tabularnewline
-bjr (0,75) & copine (0,74) & 3 (0,64) & jeudi (0,86) \tabularnewline
-hello (0,71) & meuf (0,71) & 6 (0,63) & lundi (0,83) \tabularnewline
-salut (0,66) & demoiselle (0,66) & 4 (0,62) & mercredi (0,83) \tabularnewline
-coucou (0,55) & nana (0,66) & 7 (0,60) & dimanche (0,83) \tabularnewline
-transmets (0,49) & nièce (0,66) & 5 (0,58) & mardi (0,76) \tabularnewline
-désagrément (0,48) & sœur (0,65) & 9 (0,58) & demain (0,72) \tabularnewline
-avezvous (0,48) & barbe (0,65) & 8 (0,56) & barathon (0,56) \tabularnewline
-bettembourg (0,48) & maman (0,64) & 1e (0,55) & 22h45 (0,55) \tabularnewline
-hey (0,47) & princesse (0,64) & 34 (0,53) & 20h (0,54) \tabularnewline
+bonsoir (0,85) & fille (0,86) & 2 (0,65)  \tabularnewline
+bjr (0,75) & copine (0,74) & 3 (0,64) \tabularnewline
+hello (0,71) & meuf (0,71) & 6 (0,63) \tabularnewline
+salut (0,66) & demoiselle (0,66) & 4 (0,62) \tabularnewline
+coucou (0,55) & nana (0,66) & 7 (0,60) \tabularnewline
     \hline
  \end{tabular}
 \captionsetup{margin=0cm,format=hang,justification=justified}
 \end{center}
+\tiny
 \emph{ep = 100 / w = 4 / lr = 0,02 / dim = 100 / base : ensemble des tweets}
 
 \medskip
 
-\footnotesize{10 plus proches voisins par similarité cosinus}
+\footnotesize{5 plus proches voisins par similarité cosinus}
 \end{table}
 
 \normalsize
@@ -563,7 +560,7 @@ $$Y_i = \mathds{1}\left\{ \sum_{i = 1}^n \beta_i X_{i,j} + \varepsilon_i \geq 0 
 
 Plusieurs points à traiter :
 
-- Doit-on inclure les *stop-words* ? \textsc{oui}
+- Doit-on garder les *stop-words* ? \textsc{oui}
 
 - Comment traiter les mots inconnus ? \textsc{affecter le vecteur-mot lowfrequency}
 
