--- a/Redaction/Beamer/TweetEmbedding_slides.Rmd
+++ b/Redaction/Beamer/TweetEmbedding_slides.Rmd
@@ -4,7 +4,7 @@ subtitle: "Projet de statistique appliquée, Ensae"
 author: "Kim Antunez, Romain Lesauvage et Alain Quartier-la-Tente"
 departement: "Ensae --- 2019-2020 "
 division: |
-    | encadrement : \textsc{Benjamin Muller} (Inria)
+    | Encadrant : \textsc{Benjamin Muller} (Inria)
     | 11/06/2020
 logo: "img/LOGO-ENSAE.png"
 automaticcontents: false
@@ -142,7 +142,7 @@ Pour chaque phrase on :
 
 - supprime la ponctuation, met tout en minuscule
 
-- renomme les mots rares en « lowfrequency » .
+- renomme les mots rares en « lowfrequency »
 
 - effectue un sous-échantillonnage des mots (\highlight{subsampling})
 
@@ -158,14 +158,17 @@ Exemple avec $w=2$:
 \LARGE \textbf{``}\normalsize \emph{Espérons que la présentation sous Teams se passe bien!!!} \LARGE \textbf{''}\normalsize
 \end{quote}
 
-- on supprime la ponctuation, met tout en minuscule, renomme les mots rares 
-\faArrowCircleRight{} `[espérons, que, la, présentation, sous, teams, se, passe, bien]` \pause
+- on supprime la ponctuation, met tout en minuscule  
+\faArrowCircleRight{} `[espérons, que, la, présentation, sous, teams, se, passe, bien]`
+
+- on renomme les mots rares   
+\faArrowCircleRight{} `[espérons, que, la, présentation, sous, lowfrequency, se, passe, bien]` \pause
 
 - on effectue un sous-échantillonnage des mots (\highlight{subsampling})  
-\faArrowCircleRight{} `[espérons, X, X, présentation, X, teams, se, passe, X]`
+\faArrowCircleRight{} `[espérons, X, X, présentation, X, lowfrequency, se, passe, X]`
 \pause
 - on tire au hasard un mot *focus* et un mot *contexte* associé  
-\faArrowCircleRight{} On tire un couple au hasard parmi `[présentation, teams]`, `[teams, présentation]`,  `[teams, se]`,  `[teams, passe]`,  `[se, teams]`, \dots
+\faArrowCircleRight{} On tire un couple au hasard parmi `[présentation, lowfrequency]`, `[lowfrequency, présentation]`,  `[lowfrequency, se]`,  `[lowfrequency, passe]`,  `[se, lowfrequency]`, \dots
 
 ## *softmax* et *negative sampling*
 
